# Open-Sora

./: main.py  pyproject.toml
opensora/acceleration/: parallel_states.py
opensora/datasets/: dataloader.py
opensora/utils/: ckpt.py  inference.py  logger.py
scripts/diffusion/: inference.py
